manifests/twinsight/location-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-server
  namespace: twinsight
  labels:
    app: location-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: location-server
  template:
    metadata:
      labels: 
        app: location-server
    spec:
      containers:
      - name: location-server
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/twinsight-location-server:latest
        ports:
        - containerPort: 9010
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: location-server
  namespace: twinsight
spec:
  selector:
    app: location-server
  ports:
  - protocol: TCP
    name: api
    port: 9010
    targetPort: 9010
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: location-server
  namespace: twinsight
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - location.api.twinsight.media
    secretName: twinsight-media-tls
  rules:
  - host: location.api.twinsight.media
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: location-server
            port:
              number: 9010
