manifests/twinsight/subscription-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-server
  namespace: twinsight
  labels:
    app: subscription-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscription-server
  template:
    metadata:
      labels: 
        app: subscription-server
    spec:
      containers:
      - name: subscription-server
        imagePullPolicy: Always
        image: registry.thedutchmc.nl/twinsight-subscription-server:latest
        ports:
        - containerPort: 8090
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-server
  namespace: twinsight
spec:
  selector:
    app: subscription-server
  ports:
  - protocol: TCP
    name: api
    port: 8090
    targetPort: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscription-server
  namespace: twinsight
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - subscription.api.twinsight.media
    secretName: twinsight-media-tls
  rules:
  - host: subscription.api.twinsight.media
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: subscription-server
            port:
              number: 8090
