manifests/twinsight/user-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-server
  namespace: twinsight
  labels:
    app: user-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-server
  template:
    metadata:
      labels: 
        app: user-server
    spec:
      containers:
      - name: user-server
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/twinsight-user-server:latest
        ports:
        - containerPort: 8080
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: user-server
  namespace: twinsight
spec:
  selector:
    app: user-server
  ports:
  - protocol: TCP
    name: api
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-server
  namespace: twinsight
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - user.api.twinsight.media
    secretName: twinsight-media-tls
  rules:
  - host: user.api.twinsight.media
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-server
            port:
              number: 8080
